// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Componenti/Avatar/Groups Overlapping MediumOverlaidAvatars 1`] = `
<div>
  <ul
    class="avatar-group-stacked"
  >
    <li>
      <a
        class="avatar size-md"
        href="#"
      >
        <img
          alt="Arianna Rossi"
          src="https://randomuser.me/api/portraits/women/12.jpg"
        />
      </a>
    </li>
    <li>
      <a
        class="avatar size-md"
        href="#"
      >
        <img
          alt="Giulio Neri"
          src="https://randomuser.me/api/portraits/men/13.jpg"
        />
      </a>
    </li>
    <li>
      <a
        class="avatar size-md avatar-orange"
        href="#"
      >
        <p
          aria-hidden="true"
        >
          B
        </p>
        <span
          class="visually-hidden"
        >
          Barbera Tosi
        </span>
      </a>
    </li>
    <li>
      <a
        class="avatar size-md avatar-red"
        href="#"
      >
        <p
          aria-hidden="true"
        >
          R
        </p>
        <span
          class="visually-hidden"
        >
          Roberto Milano
        </span>
      </a>
    </li>
    <li>
      <a
        class="avatar size-md"
        href="#"
      >
        <svg
          class="icon"
          enable-background="new 0 0 24 24"
          role="img"
          viewBox="0 0 24 24"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            icon
          </title>
          <path
            d="M21.9 21.1 16 15.3c1.3-1.5 2-3.4 2-5.3 0-4.4-3.6-8-8-8s-8 3.6-8 8 3.6 8 8 8c1.9 0 3.8-.7 5.3-2l5.8 5.9.8-.8zM10 17c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7z"
          />
        </svg>
      </a>
    </li>
    <li>
      <div
        class="avatar size-md avatar-dropdown"
      >
        <div
          class="dropdown"
        >
          <button
            aria-haspopup="true"
            class="dropdown-toggle btn btn-"
            data-bs-toggle="dropdown"
            id="dropdownMenuLink2"
          >
            <span
              class="visually-hidden"
            >
              Visualizza altri 4 utenti
            </span>
            <span
              aria-hidden="true"
            >
              +4
            </span>
          </button>
          <div
            class="dropdown-menu"
          >
            <div
              class="link-list-wrapper"
            >
              <ul
                class="link-list"
              >
                <li>
                  <a
                    class="list-item"
                  >
                    <div
                      class="avatar size-md"
                    >
                      <img
                        alt="Mario Rossi"
                        src="https://randomuser.me/api/portraits/men/46.jpg"
                      />
                    </div>
                    <span>
                      Mario Rossi
                    </span>
                  </a>
                </li>
                <li>
                  <a
                    class="list-item"
                  >
                    <div
                      class="avatar size-md avatar-green"
                    >
                      <p
                        aria-hidden="true"
                      >
                        A
                      </p>
                    </div>
                    <span>
                      Arianna Gello
                    </span>
                  </a>
                </li>
                <li>
                  <a
                    class="list-item"
                  >
                    <div
                      class="avatar size-md avatar-primary"
                    >
                      <p
                        aria-hidden="true"
                      >
                        S
                      </p>
                    </div>
                    <span>
                      Sara Ghioni
                    </span>
                  </a>
                </li>
                <li>
                  <a
                    class="list-item"
                  >
                    <div
                      class="avatar size-md"
                    >
                      <svg
                        class="icon"
                        enable-background="new 0 0 24 24"
                        role="img"
                        viewBox="0 0 24 24"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <title>
                          icon
                        </title>
                        <path
                          d="M21.9 21.1 16 15.3c1.3-1.5 2-3.4 2-5.3 0-4.4-3.6-8-8-8s-8 3.6-8 8 3.6 8 8 8c1.9 0 3.8-.7 5.3-2l5.8 5.9.8-.8zM10 17c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7z"
                        />
                      </svg>
                    </div>
                    <span>
                      Antonio Esposito
                    </span>
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Avatar/Groups Overlapping SmallOverlappingAvatars 1`] = `
<div>
  <ul
    class="avatar-group-stacked"
  >
    <li>
      <a
        class="avatar size-sm"
        href="#"
      >
        <img
          alt="Arianna Rossi"
          src="https://randomuser.me/api/portraits/women/12.jpg"
        />
      </a>
    </li>
    <li>
      <a
        class="avatar size-sm"
        href="#"
      >
        <img
          alt="Giulio Neri"
          src="https://randomuser.me/api/portraits/men/13.jpg"
        />
      </a>
    </li>
    <li>
      <a
        class="avatar size-sm avatar-primary"
        href="#"
      >
        <p
          aria-hidden="true"
        >
          A
        </p>
        <span
          class="visually-hidden"
        >
          Andrea Gallo
        </span>
      </a>
    </li>
    <li>
      <a
        class="avatar size-sm avatar-secondary"
        href="#"
      >
        <p
          aria-hidden="true"
        >
          S
        </p>
        <span
          class="visually-hidden"
        >
          Sara Ghioni
        </span>
      </a>
    </li>
    <li>
      <a
        class="avatar size-sm avatar-green"
        href="#"
      >
        <p
          aria-hidden="true"
        >
          T
        </p>
        <span
          class="visually-hidden"
        >
          Tomasso Sordi
        </span>
      </a>
    </li>
    <li>
      <a
        class="avatar size-sm avatar-orange"
        href="#"
      >
        <p
          aria-hidden="true"
        >
          B
        </p>
        <span
          class="visually-hidden"
        >
          Barbera Tosi
        </span>
      </a>
    </li>
    <li>
      <a
        class="avatar size-sm avatar-red"
        href="#"
      >
        <p
          aria-hidden="true"
        >
          R
        </p>
        <span
          class="visually-hidden"
        >
          Roberto Milano
        </span>
      </a>
    </li>
    <li>
      <a
        class="avatar size-sm"
        href="#"
      >
        <svg
          class="icon"
          enable-background="new 0 0 24 24"
          role="img"
          viewBox="0 0 24 24"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            icon
          </title>
          <path
            d="M21.9 21.1 16 15.3c1.3-1.5 2-3.4 2-5.3 0-4.4-3.6-8-8-8s-8 3.6-8 8 3.6 8 8 8c1.9 0 3.8-.7 5.3-2l5.8 5.9.8-.8zM10 17c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7z"
          />
        </svg>
      </a>
    </li>
    <li>
      <div
        class="avatar size-sm avatar-dropdown"
      >
        <div
          class="dropdown"
        >
          <button
            aria-haspopup="true"
            class="dropdown-toggle btn btn-"
            data-bs-toggle="dropdown"
            id="dropdownMenuLink"
          >
            <span
              class="visually-hidden"
            >
              Visualizza altri 4 utenti
            </span>
            <span
              aria-hidden="true"
            >
              +4
            </span>
          </button>
          <div
            class="dropdown-menu"
          >
            <div
              class="link-list-wrapper"
            >
              <ul
                class="link-list"
              >
                <li>
                  <a
                    class="list-item"
                  >
                    <div
                      class="avatar size-sm"
                    >
                      <img
                        alt="Mario Rossi"
                        src="https://randomuser.me/api/portraits/men/46.jpg"
                      />
                    </div>
                    <span>
                      Mario Rossi
                    </span>
                  </a>
                </li>
                <li>
                  <a
                    class="list-item"
                  >
                    <div
                      class="avatar size-sm avatar-green"
                    >
                      <p
                        aria-hidden="true"
                      >
                        A
                      </p>
                    </div>
                    <span>
                      Arianna Gello
                    </span>
                  </a>
                </li>
                <li>
                  <a
                    class="list-item"
                  >
                    <div
                      class="avatar size-sm avatar-primary"
                    >
                      <p
                        aria-hidden="true"
                      >
                        S
                      </p>
                    </div>
                    <span>
                      Sara Ghioni
                    </span>
                  </a>
                </li>
                <li>
                  <a
                    class="list-item"
                  >
                    <div
                      class="avatar size-sm"
                    >
                      <svg
                        class="icon"
                        enable-background="new 0 0 24 24"
                        role="img"
                        viewBox="0 0 24 24"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <title>
                          icon
                        </title>
                        <path
                          d="M21.9 21.1 16 15.3c1.3-1.5 2-3.4 2-5.3 0-4.4-3.6-8-8-8s-8 3.6-8 8 3.6 8 8 8c1.9 0 3.8-.7 5.3-2l5.8 5.9.8-.8zM10 17c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7z"
                        />
                      </svg>
                    </div>
                    <span>
                      Antonio Esposito
                    </span>
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;
